WIP challeng eet age ok

--- a/web/index.html
+++ b/web/index.html
@@ -25,8 +25,8 @@
         {
             fontFamily: 'Montserrat, Arial, Helvetica, sans-serif',
             fontSize: '16px',
-            botColor: '#0A2342',
-            cardColor: '#FFFDF7',
+            botColor: '#FFF0DC',
+            cardColor: '#FFF0DC',
             borderRadius: '1em',
             styles: {
                 chat: `background-image: radial-gradient(circle 79vh at bottom center, #84BC9C, #2CA58D);`,
